packages/build/tests/error/fixtures/exception_string/plugin.js
module.exports = {
  onPreBuild() {
    throw 'test'
  },
}
